--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Freeman&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Poetsen+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 *{ margin: 0; padding: 0; border: 0; }
@@ -16,23 +15,29 @@
 
 }
 
-body {
-    background-color: #E6B0AE;
-    height: 50vh;
+body, html {
+    background: linear-gradient(315deg, hsla(2, 53%, 79%, 1) 10%, hsla(13, 84%, 68%, 1) 80%);
+
+    background: -moz-linear-gradient(315deg, hsla(2, 53%, 79%, 1) 10%, hsla(13, 84%, 68%, 1) 80%);
+
+    background: -webkit-linear-gradient(315deg, hsla(2, 53%, 79%, 1) 10%, hsla(13, 84%, 68%, 1) 80%);
+
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#E6B0AE", endColorstr="#F28467", GradientType=1 );
+    height: 100vh;
     font-family: 'Freeman', sans-serif;  
 }
 
 header {
-    background-image: linear-gradient(to right, #d094837b, transparent);
+    background-image: linear-gradient(to right, #e67e61c3, transparent);
 
 }
 
 header > h1 {
-    font-family: "Roboto Mono", monospace;
+    font-family: Arial, Helvetica, sans-serif;
     text-transform: capitalize;
     color: #fffaf8;
     font-size: 20px;
-    padding: 5px;
+    padding: 10px;
 }
 .cartao-body {
     background-color: #E67D61;
@@ -44,7 +49,7 @@ header > h1 {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.616);
+    box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.471);
 }
 
 .cartao-body > h2 {
@@ -56,7 +61,7 @@ header > h1 {
     text-transform: uppercase;
 }
 
-.cartao-body > .nome {
+.cartao-body > .nome > a {
     display: flex;
     height: 35px;
     justify-content: right;
@@ -65,6 +70,7 @@ header > h1 {
     top: 80%;
     left: 15px;
     color: white;
+    text-decoration: none;
 }
 
 .cartao-body > .logo {
@@ -94,15 +100,11 @@ header > h1 {
 .informacoes {
     width: 0px;
     position: relative;
-    top: 65px;
+    top: 55px;
     left: -130px;
     font-family: Concert One;
     color: #eacdcc;
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.63);
-}
-
-p {
-    margin-top: 6px;
 }
 
 #day {
@@ -114,7 +116,7 @@ p {
     font-weight: 600;
     outline-width: none;
     padding: 0px 5px 0px 10px; 
-
+    margin: 5px 0px;
     color: rgb(0, 0, 0);
     border-radius: 5px;
 }
@@ -128,30 +130,24 @@ p {
     font-weight: 600;
     outline-width: none;
     padding: 0px 5px 0px 10px;
+    margin-top: 5px;
     color: rgb(0, 0, 0);
     border-radius: 5px;
 }
 
-.InputContainer {
-    display: relative;
+
+.inputcard { 
     height: 30px;
-    background-color: rgb(255, 255, 255);
-    padding: 0px 5px 0px 10px;
-    border: 1px solid rgba(255, 255, 255, 0.322);
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
-  }
-  
-  .input {
-    width: 170px;
-    height: 100%;
+    width: 180px;
+    margin-bottom: 4px;
     font-size: 0.9em;
     caret-color: rgb(255, 81, 0);
     background-color: rgb(255, 249, 249);
     font-weight: 600;
-    outline-width: none;
+    outline: none;
     padding-left: 5px;
     padding-right: 20px;
+    border-radius: 5px;
     color: rgb(0, 0, 0);
   }
   
@@ -173,22 +169,21 @@ p {
    display: flex;
    justify-content: flex-end; 
    align-items: flex-end;
-   height: 100vh;  
+   height: 90vh;  
    align-content: center;
     
 }
 button {
-    border: 1px solid black;
+    border: 1.4px solid rgb(255, 254, 254);
     border-radius: 30px;
-    margin: 0px 20px 40px 0px;
-    height: 30px;
+    margin: 0px 20px;
     width: 100px;
     background-color: transparent;
     display: flex;
-    align-content: flex-end;
+    align-content: center;
     border-radius: 0.9375em;
     box-sizing: border-box;
-    color: #3B3B3B;
+    color: #ffffff;
     cursor: pointer;
     font-size: 16px;
     font-weight: 600;
@@ -202,7 +197,12 @@ button {
 }
 
 button:hover {
-    background-color: #e67e61b8;
-    color: #140f0e;
+    background-color: #e67e61e7;
+    color: rgb(33, 33, 33);
     transition: 0.5s;
+}
+
+Button:active {
+    transform: translateY(5px);
+    box-shadow: 0 2px #d35400;
 }
