--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ header > h1 {
     padding: 0px 5px 0px 10px; 
     margin: 5px 0px;
     color: rgb(0, 0, 0);
+    outline: none;
     border-radius: 5px;
 }
 
@@ -132,6 +133,7 @@ header > h1 {
     padding: 0px 5px 0px 10px;
     margin-top: 5px;
     color: rgb(0, 0, 0);
+    outline: none;
     border-radius: 5px;
 }
 
